dataset/local/tf_eks_control_plane_logging/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_eks_cluster
        values:
          enabled_cluster_log_types:
            - "api"
            - "audit"
            - "authenticator"
            - "controllerManager"
            - "scheduler"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_eks_cluster
        values:
          enabled_cluster_log_types:
            - "api"
            - "audit"
