dataset/local/tf_eks_control_plane_logging/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-control-plane-logging
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-control-plane-logging
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-control-plane-logging
    kind: Plan
    resources:
      - bad-plan
    result: fail
